// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should expenses-total render wih mutliple value 1`] = `
<div
  className="page-header"
>
  <div
    className="content_container"
  >
    <h2
      className="page-header__title"
    >
      Viewing 
      <span>
        23
      </span>
       
      expenses
       totalling 
      <span>
        $54.80
      </span>
    </h2>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        to="/Add"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should expenses-total render with 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content_container"
  >
    <h2
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       totalling 
      <span>
        $2.35
      </span>
    </h2>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        to="/Add"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
